<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/checkBoxCustomColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_custom_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:useDefaultMargins="true"
            android:minWidth="150dp">

            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:text="@string/red" />

            <SeekBar
                android:id="@+id/seekBarRed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:max="255"
                android:progress="190" />

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:text="@string/green" />

            <SeekBar
                android:id="@+id/seekBarGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:max="255"
                android:progress="190" />

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:text="@string/blue" />

            <SeekBar
                android:id="@+id/seekBarBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:max="255"
                android:progress="190" />
        </GridLayout>

        <View
            android:id="@+id/viewColorPreview"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/ok" />

    <Button
        android:id="@+id/buttonOkForAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_for_all" />

</LinearLayout>
